updates license information

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "lgrep"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.75"
-authors = ["Your Name <you@example.com>"]
-license = "MIT OR Apache-2.0"
+authors = ["Jason Reed"]
+license = "MIT"
 description = "Local semantic grep - 100% offline semantic code search"
-repository = "https://github.com/yourusername/lgrep"
+repository = "https://github.com/reedme1234/lgrep"
 keywords = ["semantic-search", "grep", "embeddings", "code-search", "local"]
 categories = ["command-line-utilities", "development-tools"]
 readme = "README.md"
